--- a/docassemble/CitationToDiscoverAssetsDebtor/data/questions/citation_to_discover_assets_debtor.yml
+++ b/docassemble/CitationToDiscoverAssetsDebtor/data/questions/citation_to_discover_assets_debtor.yml
@@ -16,6 +16,7 @@ objects:
   - users: ALPeopleList.using(there_are_any=True, complete_attribute=['complete'])
   - other_parties: ALPeopleList.using(there_are_any=True, complete_attribute=['complete'])
   - agent: ALIndividual
+  - court_list: ALCourtLoader.using(file_name='docassemble.ILAO:data/sources/il_courts.xlsx')
 ---
 code: |
   ilao_easy_form_title = "Citation to discover assets to debtor"
@@ -52,11 +53,9 @@ code: |
       cant_collect_kickout
     else:
       if judgment_date > as_datetime('12/31/2019'):
-        if renewal_date < today().minus(years=10):
+        if renewal_date < today().minus(years=7):
           old_renewal_kickout
-      else:
-        if renewal_date < today().minus(years=20):
-          old_renewal_kickout
+  set_progress(20)
   if judgment_date > today().minus(days=30):
     wait_note
 
@@ -66,25 +65,30 @@ code: |
     if other_parties[0].has_agent:
       agent.name.first
   other_parties[0].address.address
-  
+  set_progress(40)
 
   nav.set_section('section_case')
   plaintiff_or_petitioner
   if trial_court_index == -1:
     cook_district
+  courthouse_info
   case_number
   judgment_amount
+  set_progress(60)
+  #calculation_debug
   amount_still_owed
   hearing_date
   any_debtor_docs
 
   nav.set_section('section_user')
+  set_progress(80)
   users[0].name.first
   users[0].address.address
   users[0].has_email_address
   e_signature
 
   nav.set_section('section_download')
+  set_progress(100)
   forms_assembling
   get_docs_screen
 ---
@@ -196,7 +200,20 @@ fields:
     datatype: yesnoradio
   - When was the judgment renewed?: renewal_date
     datatype: ThreePartsDate
-    alMax:  ${today()}
+    alMax:  |
+      % if judgment_date > as_datetime("12/31/2019"):
+      % if judgment_date.plus(years=10) > today():
+      ${ today().format("yyyy-MM-dd") }
+      % else:
+      ${ judgment_date.plus(years=10) }
+      % endif
+      % else:
+      % if judgment_date.plus(years=20) > today():
+      ${ today().format("yyyy-MM-dd") }
+      % else:
+      ${ judgment_date.plus(years=20) }
+      % endif
+       % endif
     alMin: ${judgment_date}
     js show if:
       val('been_revived') === true
@@ -229,9 +246,9 @@ question: |
   Sorry
 subquestion: |
   % if judgment_date > as_datetime('12/31/2019'):
-  You may not be able to enforce the judgment, as more than 10 years have passed since you revived the judgment on ${renewal_date}. 
+  You may not be able to enforce the judgment, as more than 7 years have passed since you revived the judgment on ${renewal_date}. 
   % else:
-  You may not be able to enforce the judgment, as more than 20 years have passed since you revived the judgment on ${renewal_date}. 
+  You may not be able to enforce the judgment, as more than 7 years have passed since you revived the judgment on ${renewal_date}. 
   % endif
 
   Learn more about [**how long a judgment lasts**](https://www.illinoislegalaid.org/legal-information/how-long-does-judgment-last).
@@ -297,7 +314,7 @@ subquestion: |
   
   Note: If ${other_parties[i].name.full(middle='full')} does not have a registered agent, be sure to include ${other_parties[i].name.full(middle='full')}'s owner as a defendant. You can add the owner by returning to the [**About the case**](${ url_action('section_case') }) section.
 fields:
-  - no label: other_parties[i].agent_check
+  - no label: other_parties[i].has_agent
     datatype: yesnoradio
 ---
 id: defendant agent name
@@ -334,6 +351,7 @@ subquestion: |
   The county should be listed near the top of the court papers.
 fields:
   - County: trial_court_index
+    datatype: integer
     code: |
       court_county_lookup()
 ---
@@ -521,12 +539,13 @@ content: |
   Visit **[Illinois Court Help](https://www.ilcourthelp.gov/)**, or you can call or text (833) 411-1121 for assistance.
 ---
 code: |
-  def court_county_lookup():
+  def court_county_lookup(lowercase=False):
     all_court_counties = court_list._load_courts()['address_county'].items()
-    filtered_courts = [(-1, "Cook")]
+    filtered_courts = [(-1, "cook")] if lowercase else [(-1, "Cook")]
     for court in all_court_counties:
       if court[1] != "Cook":
-        filtered_courts.append(court)
+        court_name = court[1].lower() if lowercase else court[1]
+        filtered_courts.append((court[0],court_name))
     return sorted( filtered_courts, key=lambda y: y[1])
 ---
 depends on:
@@ -534,15 +553,17 @@ depends on:
   - cook_district
 code: |
   if trial_court_index == -1:
-    reference_number = court_list.as_court('trial_court', cook_district)
+    trial_court = court_list.as_court('trial_court', cook_district)
   else:
-    reference_number = court_list.as_court('trial_court', trial_court_index)
+    trial_court = court_list.as_court('trial_court', trial_court_index)
     
-  court_name = str(reference_number.name)
-  court_street_address = str(reference_number.address.address)
-  court_city = str(reference_number.address.city)
-  court_state = str(reference_number.address.state)
-  court_zip = str(reference_number.address.zip)
+  court_name = str(trial_court.name)
+  court_street_address = str(trial_court.address.address)
+  court_full_street = str(trial_court.address.line_one(bare=True))
+  court_city = str(trial_court.address.city)
+  court_state = str(trial_court.address.state)
+  court_zip = str(trial_court.address.zip)
+  court_csz = str(trial_court.address.line_two())
   courthouse_info = court_name + ", " + court_street_address + ", " + court_city + ", " + court_state + " " + court_zip
 ---
 template: county_lookup_help
@@ -550,6 +571,14 @@ subject: |
   **How do I look up the county?**
 content: |  
   You can use this [**City-to-County Finder**](https://www.statsamerica.org/CityCountyFinder/) to find the county.
+---
+id: case number
+question: |
+  What is the court case number?
+subquestion: |
+  The case number is in the caption near the top of the first page of the court forms.
+fields:
+  - Case number: case_number
 ---
 id: judgment amount
 question: |
@@ -563,18 +592,22 @@ subquestion: |
 fields:
   - Judgment amount: judgment_amount
     datatype: currency
+    step: 0.01
     help: |
       This is the amount that ${other_parties[0].name.full(middle='full')} was ordered to pay you in the ${judgment_date} judgment.
   - Your court costs: court_costs
+    step: 0.01
     datatype: currency
     help: |
       These are costs such as filing fees and lawyers' fees. You should only include costs the court ordered ${other_parties[0].name.full(middle='full')} to pay. If the court did not order ${other_parties[0].name.full(middle='full')} to cover your court costs, you should leave this at zero.
   - Interest: interest_amount
     datatype: currency
+    step: 0.01
     help: |
       The rate for post-judgment interest is 9% per year. This program does not calculate how much interest you are owed.
   - Amount already paid: already_paid_amount
     datatype: currency
+    step: 0.01
     help: |
       This is the total amount of money ${other_parties[0].name.full(middle='full')} has already paid you. If ${other_parties[0].name.full(middle='full')} has not paid any of the judgment, you should leave this at zero.
 ---
@@ -582,7 +615,7 @@ template: calculating_interest
 subject: |
   **Calculating interest**
 content: |
-    <Insert example>
+    Insert example here
 ---
 depends on:
   - already_paid_amount
@@ -592,17 +625,25 @@ depends on:
 code: |
   amount_still_owed_default = (judgment_amount + court_costs + interest_amount) - already_paid_amount
 ---
+id: calculation debug
+continue button field: calculation_debug
+question: |
+  debug
+subquestion: |
+  amount_still_owed_default is ${currency(amount_still_owed_default)}
+---
 id: calculated amount still owed
 question: |
   How much does ${other_parties[0].name.full(middle='full')} still owe you?
 subquestion: |
-  According to your previous answers, ${other_parties[0].name.full(middle='full')} still owes you ${currency(amount_still_owed)}. If that amount is correct, you can click **Next**. If it seems wrong, you can edit the amount owed.
+  According to your previous answers, ${other_parties[0].name.full(middle='full')} still owes you ${currency(amount_still_owed_default)}. If that amount is correct, you can click **Next**. If it seems wrong, you can edit the amount owed.
 
   ${collapse_template(owed_example)}
 fields:
   - Amount still owed: amount_still_owed
     datatype: currency
-    default: amount_still_owed_default
+    step: 0.01
+    default: ${amount_still_owed_default}
 ---
 template: owed_example
 subject: |
@@ -654,10 +695,12 @@ fields:
   - Instructions for attending by phone or video: remote_instructions
     required: False
     input type: area
+    js show if:
+      val('hearing_type') === "remote"
 ---
 id: any debtor docs
 question: |
-  Do you want ${other_parties[0].name.fiull(middle='full')} to bring additional documents to court?
+  Do you want ${other_parties[0].name.full(middle='full')} to bring additional documents to court?
 subquestion: |
   The citation will tell ${other_parties[0].name.full(middle='full')} to bring these documents:
 
@@ -795,9 +838,7 @@ subquestion: |
   
   Read the instructions to learn what to do next.
   
-  This program does not file your forms with the court or deliver them to ${other_parties[0].name.full(middle='full')}. You will need to do this yourself. Learn about [**e-filing in Illinois**](https://www.illinoiscourts.gov/eservices/information-for-filers-without-lawyers).
-
-  **Note:** If you are e-filing, you can upload other documents as attachments during the e-filing process. If you are paper filing, bring copies of the documents to the clerk's office so you can attach them to the complaint.  
+  This program **does not file** your forms with the court. You will need to do this yourself.
   
   ${ action_button_html(url_action('review_answers'), label=':edit: Make changes', color='success', size="md") }
 
@@ -807,7 +848,7 @@ subquestion: |
 
   ${ al_user_bundle.send_button_html(show_editable_checkbox=False) }
   
-  **Note:** This program does not file your forms with the court or deliver them to ${other_parties[0].name.full(middle='full')}. You will need to do this yourself. Learn about [**e-filing in Illinois**](https://www.illinoiscourts.gov/eservices/information-for-filers-without-lawyers).
+  **Note:** This program **does not file** your forms with the court. You will need to do this yourself.
 
   Thank you for using ILAO Easy Forms!
 under: |
@@ -865,11 +906,16 @@ attachment:
   editable: True
   pdf template file: citation_debtor_first_page.pdf
   fields:
-    - "county_1": ${reference_number.address.county}
+    - "county_1": ${trial_court.address.county.upper()}
     - "case_number_1": ${case_number}
     - "plaintiff_name_1": ${users[0].name.full(middle='full') if plaintiff_or_petitioner else other_parties[0].name.full(middle='full')}
     - "defendant_name_1": ${other_parties[0].name.full(middle='full') if plaintiff_or_petitioner else users[0].name.full(middle='full')}
-    - "debtor_name_1": ${other_parties[0].name.full(middle='full')}
+    - "debtor_name_1": |
+        % if other_parties[0].person_type == "business" and other_parties[0].has_agent:
+        ${agent.name.full(middle='full')} (registered agent for ${other_parties[0].name.full(middle='full')})
+        % else:
+        ${other_parties[0].name.full(middle='full')}
+        % endif
     - "debtor_street": ${other_parties[0].address.line_one(bare=True)}
     - "debtor_csz": ${other_parties[0].address.line_two()}
     - "court_date": ${hearing_date}
@@ -879,11 +925,14 @@ attachment:
     - "in_person": ${True if hearing_type == "person" else False}
     - "remote": ${True if hearing_type == "remote" else False}
     - "courtroom": ${courtroom if hearing_type == "person" else ""}
-    - "courtroom_street": ${reference_number.address.line_one(bare=True) if hearing_type == "person" else ""}
-    - "courtroom_csz": ${reference_number.address.line_two() if hearing_type == "person" else ""}
+    - "courtroom_street": |
+        % if hearing_type == "person":
+        ${court_name}, ${court_full_street}
+        % endif
+    - "courtroom_csz": ${court_csz if hearing_type == "person" else ""}
     - "remote_instructions": ${remote_instructions}
-    - "clerk_phone": ${reference_number.phone}
-    - "clerk_website": ${reference_number.website}
+    - "clerk_phone": ${trial_court.phone}
+    - "clerk_website": ${trial_court.website}
 ---
 attachment:
   variable name: citation_remaining_pages[i]
@@ -895,21 +944,26 @@ attachment:
   fields:
     - "plaintiff_name_2": ${users[0].name.full(middle='full') if plaintiff_or_petitioner else other_parties[0].name.full(middle='full')}
     - "defendant_name_2": ${other_parties[0].name.full(middle='full') if plaintiff_or_petitioner else users[0].name.full(middle='full')}
-    - "county_2": ${reference_number.address.county}
+    - "county_2": ${trial_court.address.county}
     - "case_number_2": ${case_number}
     - "case_number_3": ${case_number}
     - "case_number_4": ${case_number}
     - "case_number_5": ${case_number}
     - "case_number_6": ${case_number}
     - "case_number_7": ${case_number}
-    - "judgment_date": ${judgment_date}
-    - "judgment_amount": ${judgment_amount}
-    - "owed_amount": ${amount_still_owed}
+    - "judgment_date": |
+        % if (today().minus(years=7) > judgment_date) and been_revived:
+        ${renewal_date}
+        % else:
+        ${judgment_date}
+        % endif
+    - "judgment_amount": ${currency(judgment_amount, symbol=u'')}
+    - "owed_amount": ${currency(amount_still_owed, symbol=u'')}
     - "other_docs": ${debtor_docs if any_debtor_docs else ""}
     - "e_signature": ${users[0].name.full(middle='full') if e_signature else ""}
     - "user_name_1": ${users[0].name.full(middle='full') }
     - "user_street": ${users[0].address.line_one(bare=True)}
-    - "user_csz": ${users[0].address.line_two(bare=True)}
+    - "user_csz": ${users[0].address.line_two()}
     - "user_email": ${users[0].email if users[0].has_email_address else ""}
     - "user_phone": ${phone_number_formatted(users[0].phone_number) if users[0].phone_number != "" else ""}
 ---
@@ -950,7 +1004,7 @@ review:
       ${other_parties[0].name.full(middle='full')}
   - Edit: other_parties[0].has_agent
     button: |
-      **Does ${other_parties[0].name.first} have a register agent?**
+      **Does ${other_parties[0].name.first} have a registered agent?**
       ${word(yesno(other_parties[0].has_agent))}
     show if: other_parties[0].person_type == "business"
   - Edit: agent.name.first
@@ -980,11 +1034,9 @@ review:
       **Your party label:**
       ${capitalize(party_label)}
   - Edit: trial_court_index
-    recompute:
-      - reference_number
     button: |
       **You are filing in:**
-      ${end_in_county(reference_number.address.county)}
+      ${end_in_county(trial_court.address.county)}
   - Edit: cook_district
     button: |
       **Cook County courthouse:**
@@ -1046,6 +1098,144 @@ question: |
 subquestion: |
   Edit your answers below.
 review:
+  - Edit: users[0].name.first
+    button: |
+      **Your name:**
+      ${users[0].name.full(middle='full')}
+  - Edit: users[0].address.address
+    button: |
+      **Your address:**
+      ${users[0].address.on_one_line(bare=True)}
+  - Edit: users[0].has_email_address
+    button: |
+      **Your contact information:**
+
+      % if users[0].has_email_address:
+      * Email: ${users[0].email}
+      % else:
+      * Email
+      % endif
+      % if users[0].phone_number != "":
+      * Phone: ${phone_number_formatted(users[0].phone_number)}
+      % else:
+      * Phone:
+      % endif
+  - Edit: e_signature
+    button: |
+      **Do you want to add your e-signature to your forms?**
+      ${ word(yesno(e_signature)) }
+---
+id: review screen
+event: review_answers
+question: |
+  Review screen
+subquestion: |
+  Edit your answers below.
+review: 
+  - note: |
+      <h4>Judgment</h4>
+  - Edit: judgment_date 
+    button: |
+        **Judgment date:**
+        ${judgment_date}
+  - Edit: been_revived
+    button: |
+      **Has the judgment been revived?**
+      ${word(yesno(been_revived))}
+    show if: today().minus(years=7) > judgment_date
+  - Edit: renewal_date
+    button: |
+        **Revival date:**
+        ${renewal_date}
+    show if: (today().minus(years=7) > judgment_date) and been_revived
+  - note: |
+      <h4>Debtor</h4>
+  - Edit: other_parties[0].name.first
+    button: |
+      **Debtor's name:**
+      ${other_parties[0].name.full(middle='full')}
+  - Edit: other_parties[0].has_agent
+    button: |
+      **Does ${other_parties[0].name.first} have a registered agent?**
+      ${word(yesno(other_parties[0].has_agent))}
+    show if: other_parties[0].person_type == "business"
+  - Edit: agent.name.first
+    button: |
+      **Agent's name:**
+      ${agent.name.full(middle='full')}
+    show if: other_parties[0].person_type == "business" and other_parties[0].has_agent
+  - Edit: other_parties[0].address.address
+    button: |
+      % if other_parties[0].person_type == "business" and other_parties[0].has_agent:
+      **${agent.name.full(middle='full')}'s address:**
+      % else:
+      **${other_parties[0].name.full(middle='full')}'s address:**
+      % endif
+      ${other_parties[0].address.on_one_line(bare=True)}
+  - note: |
+      <h4>Case details</h4>
+  - Edit: party_label
+    button: |
+      **Your party label:**
+      ${capitalize(party_label)}
+  - Edit: trial_court_index
+    button: |
+      **You are filing in:**
+      ${end_in_county(trial_court.address.county)}
+  - Edit: cook_district
+    button: |
+      **Cook County courthouse:**
+      % if cook_district == "15":
+      ${ "Daley Center, 50 W. Washington Street, Chicago" }
+      % elif cook_district == "16":
+      ${ "Second Municipal District, 5600 Old Orchard Road, Skokie" }
+      % elif cook_district == "17":
+      ${ "Third Municipal District, 2121 Euclid Avenue, Rolling Meadows" }
+      % elif cook_district == "18":
+      ${ "Fourth Municipal District, 1500 Maybrook Drive, Maywood" }
+      % elif cook_district == "19":
+      ${ "Fifth Municipal District, 10220 S. 76th Avenue, Bridgeview" }
+      % elif cook_district == "20":
+      ${ "Sixth Municipal District, 16501 South Kedzie Parkway, Markham" }
+      % elif cook_district == "21":
+      ${ "Domestic Violence Court, 555 W. Harrison Street, Chicago" }
+      % elif cook_district == "22":
+      ${ "George N. Leighton Criminal Court Building, 2600 S. California Avenue, Chicago" }
+      % else:
+      ${ "Juvenile Center, 2245 West Ogden Avenue, Chicago" }
+      % endif      
+    show if: trial_court_index == -1      
+  - Edit: case_number
+    button: |
+      **Case number:**
+      ${case_number}
+  - Edit: judgment_amount
+    button: |
+      **Original judgment amount:**
+      ${currency(judgment_amount)}
+  - Edit: amount_still_owed
+    button: |
+      **Amount still owed:**
+      ${currency(amount_still_owed)}
+  - Edit: hearing_date
+    button: |
+      **Hearing date:**
+      % if hearing_date != "":
+      ${hearing_date}
+      % else:
+      I don't know
+      % endif
+  - Edit: any_debtor_docs
+    button: |
+      % if any_debtor_docs:
+      **What additional documents should ${other_parties[0].name.full(middle='full')} bring?**
+      ${debtor_docs}
+      % else:
+      **Should ${other_parties[0].name.full(middle='full')} bring additional documents?** 
+      No
+      % endif
+  - note: |
+      <h4>About you</h4>
   - Edit: users[0].name.first
     button: |
       **Your name:**
